# speakparse

./: pyproject.toml
speakparse/: videocutter.py
