[tool.poetry]
name = "speakparse"
version = "0.1.0"
description = ""
authors = ["harshmunshi <harshmunshi03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
face-alignment = "^1.4.1"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
